[workspace]
resolver = "3"
members = [
  "obo-core",
  "obo-test-support",
  "obs-gitlab-runner"
]

[workspace.dependencies]
async-trait = "0.1"
camino = "1.1"
claims = "0.8"
clap = { version = "4.5", features = ["default", "derive", "env"] }
color-eyre = "0.6"
derivative = "2.2"
futures-util = "0.3"
open-build-service-api = { git = "https://github.com/collabora/open-build-service-rs" }
# open-build-service-api = { path = "../open-build-service-rs/open-build-service-api" }
open-build-service-mock = { git = "https://github.com/collabora/open-build-service-rs" }
# open-build-service-mock = { path = "../open-build-service-rs/open-build-service-api" }
rstest = "0.26"
serde = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
wiremock = "0.6"
