[package]
name = "obo-cli"
description = "OBS Build Orchestrator — command-line frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "obo"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
camino.workspace = true
clap.workspace = true
color-eyre.workspace = true
obo-core = { path = "../obo-core" }
open-build-service-api.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["default", "json"] }
url = "2.5"

[dev-dependencies]
claims.workspace = true
gitlab-runner-mock = "0.3.0"
obo-test-support = { path = "../obo-test-support" }
obo-tests = { path = "../obo-tests" }
open-build-service-mock.workspace = true
rstest.workspace = true
tokio-stream = { version = "0.1.18", features = ["io-util"] }
