[package]
name = "obs-commander-tests"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait.workspace = true
camino.workspace = true
claims.workspace = true
obs-commander = { path = "../obs-commander" }
obs-commander-test-support = { path = "../obs-commander-test-support" }
open-build-service-api.workspace = true
open-build-service-mock.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
